# fitsverify

./: .gitignore  CMakeLists.txt  LICENSE  README.md
AI/: In-Memory HDU Multiprocessing Proposal.md  Performance_and_Feature_Improvements.md  START_HERE.md  TODO.md  hints.md
cli/: CMakeLists.txt  fitsverify.c
docs/: c-api.rst  changelog.rst  cli.rst  conf.py  error-codes.rst  index.rst  installation.rst  python-api.rst  quickstart.rst  requirements.txt
libfitsverify/: CMakeLists.txt
libfitsverify/include/: fitsverify.h
libfitsverify/src/: fv_api.c  fv_context.h  fv_hints.c  fv_hints.h  fv_internal.h  fvrf_data.c  fvrf_file.c  fvrf_head.c  fvrf_key.c  fvrf_misc.c
python/: pyproject.toml  setup.py
python/src/fitsverify/: __init__.py  _build_ffi.py  _core.py
python/tests/: test_verify.py
source/c/: README  fitsverify.c  ftverify.c
tests/: CMakeLists.txt  gen_test_fits.c  test_abort.c  test_library_api.c  test_output_callback.c  test_regression.sh  test_threaded.c
